--- a/css/carousel.css
+++ b/css/carousel.css
@@ -32,7 +32,7 @@
     -webkit-transform: translateY(-50%);
     transform: translateY(-50%);
     font-size: 32px;
-    color: #444;
+    color: #fff;
     opacity: 0;
     -webkit-transition: all .2s ease;
     transition: all .2s ease;
