--- a/images/works/WEB/coa-b/movingsite-2.css
+++ b/images/works/WEB/coa-b/movingsite-2.css
@@ -134,6 +134,7 @@ img{
 	background-image: url(img/top-bg.png);
 	color: white;
 	font-size: 1.4em;
+	text-align: center;
 }
 
 .row{
@@ -143,10 +144,27 @@ img{
 .top-text{
 	text-align: center;
 	padding:5% 20%;
-	font-size: 1.4em;
+	font-size: 1.3em;
 	background-color: #2babe2;
 	color: white;
 	margin-bottom: 0px !important;
+}
+
+#top > h1{
+	padding-top: 8%;
+	padding-bottom: 0px;
+	font-size: 2.4em;
+}
+
+#top > h2{
+	padding-top: 0px;
+}
+
+.top-cta{
+	padding:1% 7%;
+	background-color: green;
+	border-radius: 5px;
+	background: linear-gradient(#2bca2b, #10bb10);
 }
 
 
